frontend/src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 25rem;
}

@media screen and (max-width: 576px) {
  body {
    margin-bottom: 36rem;
  }
}


.footer {
  display: block;
  position: absolute;
  bottom: 0;
  padding-top: 1rem;
  width: 100%;
  color: #fff;
}

iframe {
  border-radius: 1rem;
  height: 20.5rem;
  width: 100%;
}

.footer a {
  text-decoration: none;
  color: #fff;
}

.footer a:hover {
  text-decoration: underline;
  color: #fff;
}

.fb {
  fill: rgba(255, 255, 255, 0.7) !important;
}

.fb:hover {
  fill: rgb(255, 255, 255) !important;
}

/*@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap');

body {
  font-family: 'Noto Serif TC', serif !important;
  need to find a font!
}*/

